Login implementation with validation completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+body{
+  background-color: rgb(245, 236, 236);
+}
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +39,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+.message-error{
+  
+  color: black;
+  padding: 0.1rem;
+  margin: auto;
+  margin-bottom: 2rem;
+  width: 60%;
+  border: 0.2rem solid rgb(219, 22, 22);
+  background-color: #f18383;
+}
+input{
+  padding: 0.3rem;
+  display: block;
+  margin: auto;
+  margin-bottom: 0.5rem;
+}
+.submit{
+  background-color: rgb(155, 187, 228);
+  padding: 0.7rem;
+  border-radius: 8%;
+  border:  0.1rem solid rgb(99, 117, 175);
+  font-style: italic;
 }
